# anvil

./: Cargo.toml
benchmark/: README.md  gen_corpus.py  manifest.json  manifest_pt.json  manifest_sqlilabs.json  results.csv  results.md  run_benchmark.py
benchmark/targets/: vulnapp.py
docs/: anvil.1
src/: main.rs
src/cli/: args.rs
src/cmdi/: detector.rs  mod.rs
src/components/: detector.rs  mod.rs
src/core/: capability.rs  context.rs  engine.rs  profile.rs
src/cors/: detector.rs  mod.rs
src/crlf/: detector.rs  mod.rs
src/jwt/: detector.rs  mod.rs
src/mcp/: mod.rs
src/nosqli/: detector.rs  mod.rs
src/openredirect/: detector.rs  mod.rs
src/pathtrav/: detector.rs  mod.rs
src/reporting/: json.rs  model.rs
src/scanner/: crawler.rs
src/secheaders/: detector.rs  mod.rs
src/secrets/: detector.rs  mod.rs
src/sqli/: errors.rs  mod.rs
src/sqli/request/: connect.rs  mod.rs
src/sqli/techniques/blind/: inference.rs
src/sqli/techniques/dns/: test.rs
src/sqli/techniques/error/: use.rs
src/sri/: detector.rs  mod.rs
src/ssrf/: detector.rs  evidence.rs  mod.rs  oob.rs  probes.rs  scanner.rs
src/ssti/: detector.rs  mod.rs
src/xss/: blind.rs  headless.rs  mod.rs  reflect.rs  stored.rs
src/xxe/: detector.rs  mod.rs
