[package]
name = "anvil"
version = "0.4.0"
edition = "2021"
authors = ["Siddhant Bhattarai"]
description = "ANVIL – Enterprise-grade vulnerability scanning and adversarial testing framework"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
sha2 = "0.10"
scraper = "0.18"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_urlencoded = "0.7"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
unicode-width = "0.1"
lazy_static = "1.4"
md5 = "0.7"
sha1 = "0.10"
hex = "0.4"
# Headless-browser XSS execution verification (CDP via system Chrome).
chromiumoxide = "0.9"
futures = "0.3"